--- a/Computer Notes.html
+++ b/Computer Notes.html
@@ -10,146 +10,13 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/extra.css" />
 		<link rel="stylesheet" href="animate.min.css">
 		<link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 		<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 		<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 	</head>
-	<style>
-		.dropbtn 
-		{
-			padding: 16px;
-			font-size: 26px;
-			border: 10px;
-			cursor: pointer;
-		}
-
-		#myInput
-		{
-			width: 1000px;
-			box-sizing: border-box;
-			background-position: 14px 12px;
-			background-repeat: no-repeat;
-			background-color: #ffffff;
-			color: rgb(59, 59, 59);
-			font-size: 20px;
-			padding: 14px 20px 12px 45px;
-			border: none;
-			border: 1.5px solid #04AA6d ;
-		}
-
-		#myInput:focus
-		{
-			outline: none;
-		}
-
-		.dropdown 
-		{
-		  position: relative;
-		  display: inline-block;
-		  border: 10px;
-		}
-		
-		.dropdown-content 
-		{
-		  display: none;
-		  position: absolute;
-		  background-color: #f6f6f6;
-		  width: 960px;
-		  overflow: auto;
-		  border: 1px solid #ddd;
-		  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-		  z-index: 1;
-		}
-		
-		.dropdown-content a 
-		{
-		  color: #04AA6D;
-		  padding: 12px 16px;
-		  text-decoration: none;
-		  display: block;
-		}
-		
-		.dropdown a:hover
-		{
-			background-attachment: #ddd;
-			color: #04AA6D;
-		}
-		.show
-		{
-			display: inline-block;
-		}
-		:root
-		{
-			--btn:rgb(74,202,169);
-			--btn-shadow:rgba(74,202,169,0.5);
-		}
-		textarea
-		{
-			margin-top: 30px;
-			height: 200px;
-			border-radius: 5px;
-		}
-		.send
-		{
-			background:var(--btn);
-			color:white;
-			width:20%; 
-			box-shadow:0px 0px 1px 1px var(--btn-shadow);
-			border:none;
-			user-select:none;
-			border-radius:5px;
-			padding:6px 3px;
-		}
-		.send:active
-		{
-			background:var(--btn);
-			animation:pulse 0.05s forwards;
-		}
-		.name
-		{
-			border-radius:5px;
-			border:1px solid black;
-			padding:10px 0;
-		}
-		.email
-		{
-			border-radius:5px;
-			border:1px solid black;
-			padding:10px 0;
-		}
-		.name:focus , textarea:focus,.email:focus
-		{
-			outline:none;
-		}
-		.container
-		{
-			display:flex;
-			justify-content: center;
-			width:min(1000px, 85%);
-			flex-flow:row wrap;
-			/* grid-template-columns:100%; */
-			/* grid-gap:5px; */
-			margin:0 auto;
-		}
-		.container>*:not(.send)
-		{
-			width:100%;
-			margin-bottom:10px;
-		}
-		@keyframes pulse 
-		{
-			from
-			{
-				box-shadow:0px 0px 1px 0px var(--btn-shadow);
-			}
-			to
-			{
-				box-shadow:0px 0px 0px 4px var(--btn-shadow);
-			}
-		}
-	</style>
 	<body class="is-preload">
 
 		<!-- Header -->
@@ -163,7 +30,7 @@
 					<ul>
 						<li><a href="#one"><p class="animated fadeInRight">CICSE</p></a></li>
 						<li><a href="#two"><p class="animated fadeInLeft">CBSE</p></a></li>
-						<li><a href="#four"><p class="animated fadeInRight">Contact</p></a></li>
+						<li><a href="#three"><p class="animated fadeInRight">Contact</p></a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -171,6 +38,7 @@
 						<li><a href="https://www.linkedin.com/company/78048587/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://www.instagram.com/cubebooks/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="mailto:cubebooks.netlify@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://twitter.com/cube_books" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -182,145 +50,128 @@
 					<div id="main">
 
 						<!--One -->
-						<section id="one">
-							<div class="dropdown">
-							<input type="text" onclick="myFunction()" class="dropbtn" placeholder="Search Here....." id="myInput" onkeyup="filterFunction()">
-								<div id="myDropdown" class="dropdown-content">
-									<a href="Place the drive link here">Place the book name here</a>
-								</div>
-							</div>
-							<div class="container">
-								<h3 class="animated zoomIn">CISCE</h3>
-								<div class="table-wrapper">
-									<table>
-										<thead>
-											<tr>
-												<th>Notes</th>
-												<th>Download</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<td>Place the book name here</td>
-												<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
-											</tr>
-										</tbody>
-									</table>
-								</div>
-							</div>
-						</section>
-
-						<!--Two -->
-						<section id="two">
-							<div class="container">
-								<h3 class="animated zoomIn">CBSE</h3>
-								<div class="table-wrapper">
-									<table>
-										<thead>
-											<tr>
-												<th>Notes</th>
-												<th>Download</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<td>Place the book name here</td>
-												<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
-											</tr>
-										</tbody>
-									</table>
-								</div>
-							</div>
-						</section>
-				
-						<!-- Four --> 
-						<section id="four"> 
-							<div class="container"> 
-							<h3>Contact Us</h3> 
-							<textarea placeholder="Enter your message"></textarea> 
-							<input type="text" class="name" placeholder="Full Name"> 
-							<input type="text" class="email" placeholder="Email"/>
-							<button class="send" onclick="sendReq()">send</button> 
-							</div> 
-						</section> 
-						</div>
-
-					</div>
-
-				<!-- Footer -->
-					<section id="footer">
+						<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..." title="Type in a name">
 						<div class="container">
-							<ul class="copyright">
-								<li>&copy; CubeBooks 2022. All rights reserved.</li>
-							</ul>
-							<ul class="icons">
-								<li><a href="https://www.linkedin.com/company/78048587/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://www.instagram.com/cubebooks/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="mailto:cubebooks.netlify@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-							</ul>
+							<div class="table-wrapper">
+								<table id="myTable">	
+									<thead section id="one">
+										<tr>
+											<th><h3>CISCE</h3></th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>Place the book name here</td>
+											<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+									</tbody>
+									<br>	
+									<thead section id="two">
+										<tr>
+											<th><h3>CBSE</h3></th>	
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>Place the book name here</td>
+											<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
 						</div>
 					</section>
 
-			</div>
+					
+					<!-- three --> 
+					<section id="three"> 
+						<div class="container"> 
+						<h3>Contact Us</h3> 
+						<textarea placeholder="Enter your message"></textarea> 
+						<input type="text" class="name" placeholder="Full Name"> 
+						<input type="text" class="email" placeholder="Email"/>
+						<button class="send" onclick="sendReq()">send</button> 
+						</div> 
+					</section> 
+					</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-			<script>
-				function myFunction()
-				{
-					document.getElementById("myDropdown").classList.toggle("show");
-				}
-				function filterFunction()
-				{
-					var input, filter, ul, li, a, i;
-					input = document.getElementById("myInput");
-					filter = input.value.toUppercase();
-					div = document.getElementById("myDropdown");
-					a = div.getElementByTagName("a");
-					for (i=0; i < a.length; i++)
-					{
-						txtValue = a[i].textContent  || a[i].innerText;
-						if (txtValue.toUpperCase().indexOf(filter) > -1)
-						{
-							a[i].style.display = "";
-						}
-						else
-						{
-							a[i].style.display = "none";
-						}
-					}
-				}
-			</script>
-			<script>
-				function sendReq()
-				{
-					var name=document.getElementsByClassName("name")[0].value;
-					var msg=document.getElementsByTagName("textarea")[0].value;
-					var email=document.getElementsByClassName("email")[0].value;
-					if([name.length,msg.length,email.length].includes(0))
-					{
-						alert("you must fill all the fields");
-					}
-					else
-					{
-						msg="feedback from "+name+"\n"+email+" :\n"+msg;
-						var xhttp=new XMLHttpRequest();
-						xhttp.open("GET",encodeURI("https://api.telegram.org/bot1785343477:AAGfO1PIpAwAKUu8BF6IkIgUgoTxPTJo-a0/sendMessage?chat_id=-1001262147694&text="+msg),true);
-						xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-						xhttp.send();
-						document.getElementsByClassName("name")[0].value="";
-						document.getElementsByTagName("textarea")[0].value="";
-						document.getElementsByClassName("email")[0].value="";
-						alert("thank you for your feedback !");
-					}
-				}
-			</script>
+				</div>
 
-	</body>
+			<!-- Footer -->
+				<section id="footer">
+					<div class="container">
+						<ul class="copyright">
+							<li>&copy; CubeBooks 2022. All rights reserved.</li>
+						</ul>
+						<ul class="icons">
+							<li><a href="https://www.linkedin.com/company/78048587/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.instagram.com/cubebooks/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="mailto:cubebooks.netlify@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://twitter.com/cube_books" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						</ul>
+					</div>
+				</section>
+
+		</div>
+
+	<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
+		<script>
+		function myFunction() 
+		{
+			var input, filter, table, tr, td, i, txtValue;
+			input = document.getElementById("myInput");
+			filter = input.value.toUpperCase();
+			table = document.getElementById("myTable");
+			tr = table.getElementsByTagName("tr");
+			for (i = 0; i < tr.length; i++) 
+			{
+				td = tr[i].getElementsByTagName("td")[0];
+				if (td) 
+				{
+					txtValue = td.textContent || td.innerText;
+					if (txtValue.toUpperCase().indexOf(filter) > -1) 
+					{
+						tr[i].style.display = "";
+					} 
+					else 
+					{
+						tr[i].style.display = "none";
+					}
+				}       
+			}
+		}
+		</script>
+		<script>
+			function sendReq()
+			{
+				var name=document.getElementsByClassName("name")[0].value;
+				var msg=document.getElementsByTagName("textarea")[0].value;
+				var email=document.getElementsByClassName("email")[0].value;
+				if([name.length,msg.length,email.length].includes(0))
+				{
+					alert("you must fill all the fields");
+				}
+				else
+				{
+					msg="feedback from "+name+"\n"+email+" :\n"+msg;
+					var xhttp=new XMLHttpRequest();
+					xhttp.open("GET",encodeURI("https://api.telegram.org/bot1785343477:AAGfO1PIpAwAKUu8BF6IkIgUgoTxPTJo-a0/sendMessage?chat_id=-1001262147694&text="+msg),true);
+					xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+					xhttp.send();
+					document.getElementsByClassName("name")[0].value="";
+					document.getElementsByTagName("textarea")[0].value="";
+					document.getElementsByClassName("email")[0].value="";
+					alert("thank you for your feedback !");
+				}
+			}
+		</script>
+
+</body>
 </html>
