--- a/Physics Books.html
+++ b/Physics Books.html
@@ -10,146 +10,13 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/extra.css" />
 		<link rel="stylesheet" href="animate.min.css">
 		<link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 		<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 		<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 	</head>
-	<style>
-		.dropbtn 
-		{
-			padding: 16px;
-			font-size: 26px;
-			border: 10px;
-			cursor: pointer;
-		}
-
-		#myInput
-		{
-			width: 1000px;
-			box-sizing: border-box;
-			background-position: 14px 12px;
-			background-repeat: no-repeat;
-			background-color: #ffffff;
-			color: rgb(59, 59, 59);
-			font-size: 20px;
-			padding: 14px 20px 12px 45px;
-			border: none;
-			border: 1.5px solid #04AA6d ;
-		}
-
-		#myInput:focus
-		{
-			outline: none;
-		}
-
-		.dropdown 
-		{
-		  position: relative;
-		  display: inline-block;
-		  border: 10px;
-		}
-		
-		.dropdown-content 
-		{
-		  display: none;
-		  position: absolute;
-		  background-color: #f6f6f6;
-		  width: 960px;
-		  overflow: auto;
-		  border: 1px solid #ddd;
-		  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-		  z-index: 1;
-		}
-		
-		.dropdown-content a 
-		{
-		  color: #04AA6D;
-		  padding: 12px 16px;
-		  text-decoration: none;
-		  display: block;
-		}
-		
-		.dropdown a:hover
-		{
-			background-attachment: #ddd;
-			color: #04AA6D;
-		}
-		.show
-		{
-			display: inline-block;
-		}
-		:root
-		{
-			--btn:rgb(74,202,169);
-			--btn-shadow:rgba(74,202,169,0.5);
-		}
-		textarea
-		{
-			margin-top: 30px;
-			height: 200px;
-			border-radius: 5px;
-		}
-		.send
-		{
-			background:var(--btn);
-			color:white;
-			width:20%; 
-			box-shadow:0px 0px 1px 1px var(--btn-shadow);
-			border:none;
-			user-select:none;
-			border-radius:5px;
-			padding:6px 3px;
-		}
-		.send:active
-		{
-			background:var(--btn);
-			animation:pulse 0.05s forwards;
-		}
-		.name
-		{
-			border-radius:5px;
-			border:1px solid black;
-			padding:10px 0;
-		}
-		.email
-		{
-			border-radius:5px;
-			border:1px solid black;
-			padding:10px 0;
-		}
-		.name:focus , textarea:focus,.email:focus
-		{
-			outline:none;
-		}
-		.container
-		{
-			display:flex;
-			justify-content: center;
-			width:min(1000px, 85%);
-			flex-flow:row wrap;
-			/* grid-template-columns:100%; */
-			/* grid-gap:5px; */
-			margin:0 auto;
-		}
-		.container>*:not(.send)
-		{
-			width:100%;
-			margin-bottom:10px;
-		}
-		@keyframes pulse 
-		{
-			from
-			{
-				box-shadow:0px 0px 1px 0px var(--btn-shadow);
-			}
-			to
-			{
-				box-shadow:0px 0px 0px 4px var(--btn-shadow);
-			}
-		}
-	</style>
 	<body class="is-preload">
 
 		<!-- Header -->
@@ -162,7 +29,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one"><p class="animated fadeInRight">Entrance</p></a></li>
-						<li><a href="#two"><p class="animated fadeInLeftt">CISCE</p></a></li>
+						<li><a href="#two"><p class="animated fadeInLeft">CISCE</p></a></li>
 						<li><a href="#three"><p class="animated fadeInRight">CBSE</p></a></li>
 						<li><a href="#four"><p class="animated fadeInLeft">Contact</p></a></li>
 					</ul>
@@ -172,6 +39,7 @@
 						<li><a href="https://www.linkedin.com/company/78048587/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://www.instagram.com/cubebooks/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="mailto:cubebooks.netlify@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://twitter.com/cube_books" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -183,113 +51,43 @@
 					<div id="main">
 
 						<!--One -->
-						<section id="one">
-							<div class="dropdown">
-							<input type="text" onclick="myFunction()" class="dropbtn" placeholder="Search Here....." id="myInput" onkeyup="filterFunction()">
-								<div id="myDropdown" class="dropdown-content">
-									<a href="https://drive.google.com/drive/folders/1-2zU7UrmY_OM1Yb6qma-V3-axCmIcPAt?usp=sharing">D.C. Pandey</a>
-									<a href="https://drive.google.com/drive/folders/10s9NNxtRH7cm3BJQgksSrcnPOPYuyvZh?usp=sharing">I.E. Irodov With Solution</a>
-									<a href="https://drive.google.com/drive/folders/1vfxteJsRwhDZXetdjs6AFZCNuzR6qg-k?usp=sharing">Physics Galaxy By Ashish Arora</a>
-									<a href="https://drive.google.com/drive/folders/1QyjRNldO47selwqJEt9QG_1kaagGNO47?usp=sharing">S.L. Arora Volume 1 And Volume 2</a>
-								</div>
-							</div>
+							<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..." title="Type in a name">
 							<div class="container">
-								<h3 class="animated zoomIn">Entrance</h3>
 								<div class="table-wrapper">
-									<table>
-										<thead>
+									<table id="myTable">
+										<thead section id="one">
 											<tr>
-												<th>Name</th>
-												<th>Download</th>
+												<th><h3>Entrance</h3></th>
 											</tr>
 										</thead>
 										<tbody>
 											<tr>
-												<td>D.C. Pandey</td>
-												<td><a href="https://drive.google.com/drive/folders/1-2zU7UrmY_OM1Yb6qma-V3-axCmIcPAt?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
-											</tr>
-											
-											<tr>
-												<td>I.E. Irodov With Solution</td>
-												<td><a href="https://drive.google.com/drive/folders/10s9NNxtRH7cm3BJQgksSrcnPOPYuyvZh?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
-											</tr>
-											<tr>
-												<td>Physics Galaxy By Ashish Arora</td>
-												<td><a href="https://drive.google.com/drive/folders/1vfxteJsRwhDZXetdjs6AFZCNuzR6qg-k?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
-											</tr>
-											<tr>
-												<td>S.L. Arora Volume 1 and Volume 2</td>
-												<td><a href="https://drive.google.com/drive/folders/1QyjRNldO47selwqJEt9QG_1kaagGNO47?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
-											</tr>
-											<tr>
-												<td>Resnick And Haliday</td>
-												<td><a href="https://drive.google.com/file/d/11lv8jOqmwInJDymd6u8VEV2JgQdwWmBn/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
-											</tr>
-											<tr>
-												<td>Arihant HandBook For Class 11,12 and Jee/Neet</td>
-												<td><a href="https://drive.google.com/file/d/11pNNpAWHsSDZ_2ryoZ7SRkEpXbs4ZcQ-/view?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+												<td>Place the book name here</td>
+												<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
 											</tr>
 										</tbody>
-									</table>
-								</div>
-							</div>
-						</section>
-
-						<!-- Two -->
-							<section id="two">
-								<div class="container">
-									<h3 class="animated zoomIn">CISCE</h3>
-									<div class="table-wrapper">
-										<table>
-											<thead>
-												<tr>
-													<th>Name</th>
-													<th>Download</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Place the book name here</td>
-													<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
-												</tr>
-											</tbody>
-										</table>
-									</div>
-								</div>
-							</section>
-						
-						<!-- Three -->
-						<section id="three">
-							<div class="container">
-								<h3 class="animated zoomIn">CBSE</h3>
-								<div class="table-wrapper">
-									<table>
-										<thead>
+										<br>	
+										<thead section id="two">
 											<tr>
-												<th>Name</th>
-												<th>Download</th>
+												<th><h3>CISCE</h3></th>
 											</tr>
 										</thead>
 										<tbody>
 											<tr>
-												<td>Modern ABC Class 12</td>
-												<td><a href="https://drive.google.com/drive/folders/1Qd8T00ClBWyqzgYl0wtJb45jrsJwJIrc?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+												<td>Place the book name here</td>
+												<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
 											</tr>
+										</tbody>
+										<br>	
+										<thead section id="three">
 											<tr>
-												<td>Modern ABC Class 11</td>
-												<td><a href="https://drive.google.com/drive/folders/1Db6PWVOECAx-VKti3dGDvBpxlcarEhpR?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+												<th><h3>CBSE</h3></th>	
 											</tr>
+										</thead>
+										<tbody>
 											<tr>
-												<td>Term 1 Class 12 All Books</td>
-												<td><a href="https://drive.google.com/drive/folders/1sgKhZdWVg-XPd99sFGknBa5LYFyfUET5?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
-											</tr>
-											<tr>
-												<td>Master The Ncert Class 11&12</td>
-												<td><a href="https://drive.google.com/drive/folders/1QilRCOMnxkMilISg9pwaM0754eKPmRUN?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
-											</tr>
-											<tr>
-												<td>Ncert Physics Class 11&12</td>
-												<td><a href="https://drive.google.com/drive/folders/1M6U6Zmwa9suFYJEAP_NUiPx3zEVHUfl_?usp=sharing" class="button primary icon solid fa-download">PDF</a></td>
+												<td>Place the book name here</td>
+												<td><a href="#place the drive link here" class="button primary icon solid fa-download">PDF</a></td>
 											</tr>
 										</tbody>
 									</table>
@@ -322,6 +120,7 @@
 								<li><a href="https://www.linkedin.com/company/78048587/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://www.instagram.com/cubebooks/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="mailto:cubebooks.netlify@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://twitter.com/cube_books" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							</ul>
 						</div>
 					</section>
@@ -337,30 +136,30 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script>
-				function myFunction()
+			function myFunction() 
+			{
+				var input, filter, table, tr, td, i, txtValue;
+				input = document.getElementById("myInput");
+				filter = input.value.toUpperCase();
+				table = document.getElementById("myTable");
+				tr = table.getElementsByTagName("tr");
+				for (i = 0; i < tr.length; i++) 
 				{
-					document.getElementById("myDropdown").classList.toggle("show");
-				}
-				function filterFunction()
-				{
-					var input, filter, ul, li, a, i;
-					input = document.getElementById("myInput");
-					filter = input.value.toUppercase();
-					div = document.getElementById("myDropdown");
-					a = div.getElementByTagName("a");
-					for (i=0; i < a.length; i++)
+					td = tr[i].getElementsByTagName("td")[0];
+					if (td) 
 					{
-						txtValue = a[i].textContent  || a[i].innerText;
-						if (txtValue.toUpperCase().indexOf(filter) > -1)
+						txtValue = td.textContent || td.innerText;
+						if (txtValue.toUpperCase().indexOf(filter) > -1) 
 						{
-							a[i].style.display = "";
-						}
-						else
+							tr[i].style.display = "";
+						} 
+						else 
 						{
-							a[i].style.display = "none";
+							tr[i].style.display = "none";
 						}
-					}
+					}       
 				}
+			}
 			</script>
 			<script>
 				function sendReq()
