--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 					<ul>
 						<li><a href="#one" class="active"><p class="animated fadeInLeft">About</p></a></li>
 						<li><a href="#two"><p class="animated fadeInRight">BOOKS</p></a></li>
-						<li><a href="#four"><p class="animated fadeInLeft">Contact</p></a></li>
+						<li><a href="#three"><p class="animated fadeInLeft">Contact</p></a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -147,6 +147,7 @@
 						<li><a href="https://www.linkedin.com/company/78048587/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://www.instagram.com/cubebooks/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="mailto:cubebooks.netlify@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://twitter.com/cube_books" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -259,8 +260,8 @@
 							</section>
 
 						
-						<!-- Four --> 
-						<section id="four"> 
+						<!-- three --> 
+						<section id="three"> 
 							<div class="container"> 
 							<h3>Contact Us</h3> 
 							<textarea placeholder="Enter your message"></textarea> 
@@ -283,6 +284,7 @@
 								<li><a href="https://www.linkedin.com/company/78048587/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://www.instagram.com/cubebooks/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="mailto:cubebooks.netlify@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://twitter.com/cube_books" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							</ul>
 						</div>
 					</section>
